# docs/openapi.json
@@ -2079,6 +2079,42 @@
         }
       }
     },
+    "/api/interviews/{id}/no-show": {
+      "post": {
+        "summary": "POST /api/interviews/:id/no-show",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Validation Error"
+          }
+        }
+      }
+    },
     "/api/interviews/{id}/reschedule": {
       "post": {
         "summary": "POST /api/interviews/:id/reschedule",
